[gd_scene load_steps=12 format=3 uid="uid://w7nxakjxpj46"]

[ext_resource type="Script" path="res://scripts/bottom_interface.gd" id="1_whuqi"]
[ext_resource type="Script" path="res://scripts/panel_container_bottom.gd" id="2_0bspq"]
[ext_resource type="Texture2D" uid="uid://dvricollhb0oa" path="res://assets/Aseprite Assets/Stone-1x1-Only-Orange.png" id="3_syjwx"]
[ext_resource type="PackedScene" uid="uid://dgcugsewug5jl" path="res://scenes/job_scenes/red_job.tscn" id="5_u5ew8"]
[ext_resource type="Texture2D" uid="uid://br2oi5pw16a5g" path="res://assets/Aseprite Assets/Stone-1x1-Only-Purple.png" id="6_576j5"]
[ext_resource type="Script" path="res://scripts/job_button.gd" id="6_doe77"]
[ext_resource type="PackedScene" uid="uid://drq7qgfu51pr8" path="res://scenes/job_scenes/blue_job.tscn" id="7_nufhw"]
[ext_resource type="Texture2D" uid="uid://bj4kdfqyh0jgk" path="res://assets/Aseprite Assets/Stone-1x1-Only-Green.png" id="8_7xu1s"]
[ext_resource type="PackedScene" uid="uid://oecg13g140rm" path="res://scenes/pickup_job.tscn" id="9_e8n8b"]
[ext_resource type="Texture2D" uid="uid://058nc248d2si" path="res://assets/Aseprite Assets/Stone-1x1-Only-LightBlue.png" id="10_o8eky"]
[ext_resource type="PackedScene" uid="uid://d2of3u7re0t0k" path="res://scenes/job_scenes/light_blue_job.tscn" id="11_npfvu"]

[node name="BottomInterface" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 1920.0
grow_vertical = 0
size_flags_horizontal = 6
script = ExtResource("1_whuqi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 360.0
offset_right = -60.0
grow_vertical = 2
script = ExtResource("2_0bspq")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2
follow_focus = true
scroll_vertical_custom_step = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="PanelContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture_normal = ExtResource("3_syjwx")
texture_pressed = ExtResource("3_syjwx")
texture_hover = ExtResource("3_syjwx")
stretch_mode = 0
script = ExtResource("6_doe77")
job = ExtResource("5_u5ew8")

[node name="TextureButton2" type="TextureButton" parent="PanelContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture_normal = ExtResource("6_576j5")
texture_pressed = ExtResource("6_576j5")
texture_hover = ExtResource("6_576j5")
stretch_mode = 0
script = ExtResource("6_doe77")
job = ExtResource("7_nufhw")

[node name="TextureButton3" type="TextureButton" parent="PanelContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture_normal = ExtResource("8_7xu1s")
texture_pressed = ExtResource("8_7xu1s")
texture_hover = ExtResource("8_7xu1s")
stretch_mode = 0
script = ExtResource("6_doe77")
job = ExtResource("9_e8n8b")

[node name="TextureButton4" type="TextureButton" parent="PanelContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture_normal = ExtResource("10_o8eky")
texture_pressed = ExtResource("10_o8eky")
texture_hover = ExtResource("10_o8eky")
stretch_mode = 0
script = ExtResource("6_doe77")
job = ExtResource("11_npfvu")

[node name="CollapseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 90.0
offset_top = -231.0
offset_right = 210.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
toggle_mode = true
button_pressed = true
text = "Stations
"

[connection signal="button_down" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton" method="_on_button_down"]
[connection signal="button_up" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton" method="_on_button_up"]
[connection signal="create_new_job" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton" to="." method="_on_texture_button_create_new_job"]
[connection signal="mouse_exited" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton" method="_on_mouse_exited"]
[connection signal="button_down" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton2" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton2" method="_on_button_down"]
[connection signal="button_up" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton2" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton2" method="_on_button_up"]
[connection signal="create_new_job" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton2" to="." method="_on_texture_button_create_new_job"]
[connection signal="mouse_exited" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton2" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton2" method="_on_mouse_exited"]
[connection signal="button_down" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton3" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton3" method="_on_button_down"]
[connection signal="button_up" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton3" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton3" method="_on_button_up"]
[connection signal="create_new_job" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton3" to="." method="_on_texture_button_create_new_job"]
[connection signal="mouse_exited" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton3" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton3" method="_on_mouse_exited"]
[connection signal="button_down" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton4" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton4" method="_on_button_down"]
[connection signal="button_up" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton4" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton4" method="_on_button_up"]
[connection signal="create_new_job" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton4" to="." method="_on_texture_button_create_new_job"]
[connection signal="mouse_exited" from="PanelContainer/ScrollContainer/HBoxContainer/TextureButton4" to="PanelContainer/ScrollContainer/HBoxContainer/TextureButton4" method="_on_mouse_exited"]
[connection signal="toggled" from="CollapseButton" to="." method="expand_shrink_menu"]
